compiler/tests/should-fail/OutParamDupInitialization.via
/* OutParameterInitializationError */

fun add10{(alice & bob)<-}(a: int{alice}, b: out int{bob}) {
    out b = 10;
    out b = 20;
}

fun main() {
    val array = Array[int]{alice}(10);
    val a: int{alice} = 0;
    add10(a, val b);
    output a to alice;
}

host alice
host bob
